fixed nav spacing on sale page

--- a/client/static/css/styles.css
+++ b/client/static/css/styles.css
@@ -397,6 +397,9 @@ footer .sub{
 		grid-row: auto;
 		grid-column: 3/4;
 	}
+	nav.firstFive{
+		grid-template-columns: 2fr 0fr 10fr;
+	}
 	nav.firstFive > .section_links{
 		font-size: 1em;
 		grid-template-columns: repeat(6, 1fr);
@@ -494,9 +497,6 @@ footer .sub{
 		justify-content: center;
 		justify-items: stretch;
 		align-items: stretch;
-	}
-	.gtr_th{
-
 	}
 	.gtr_th:hover{
 		transform: scale(1.05);
